refactor(pathfinder): using appropriate JAVA_21 methods